--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -24,11 +24,19 @@
     "@aws-sdk/client-s3": "^3.88.0"
   },
   "devDependencies": {
-    "@openzeppelin/contracts": "^4.6.0",
     "@ethereum-waffle/jest": "^3.3.2",
+    "@ethersproject/address": "^5.6.1",
+    "@ethersproject/bytes": "^5.6.1",
+    "@ethersproject/contracts": "^5.6.1",
+    "@ethersproject/keccak256": "^5.6.1",
+    "@ethersproject/providers": "^5.6.1",
+    "@ethersproject/strings": "^5.6.1",
+    "@ethersproject/transactions": "^5.6.1",
+    "@ethersproject/wallet": "^5.6.1",
     "@nomiclabs/hardhat-ethers": "^2.0.5",
     "@nomiclabs/hardhat-etherscan": "^3.0.3",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
+    "@openzeppelin/contracts": "^4.7.3",
     "@typechain/ethers-v5": "^7.2.0",
     "@typechain/hardhat": "^2.3.1",
     "@types/bl": "^5.0.2",
@@ -49,21 +57,11 @@
     "eslint-plugin-promise": "^5.2.0",
     "ethereum-waffle": "^3.4.4",
     "ethers": "^5.6.5",
-    "@ethersproject/wallet": "^5.6.1",
-    "@ethersproject/bytes": "^5.6.1",
-    "@ethersproject/keccak256": "^5.6.1",
-    "@ethersproject/providers": "^5.6.1",
-    "@ethersproject/transactions": "^5.6.1",
-    "@ethersproject/strings": "^5.6.1",
-    "@ethersproject/contracts": "^5.6.1",
-    "@ethersproject/address": "^5.6.1",
-    "hardhat": "^2.9.3",
+    "hardhat": "^2.11.2",
     "hardhat-gas-reporter": "^1.0.8",
-    "ipfs": "^0.62.3",
-    "ipfs-api": "^26.1.2",
-    "ipfs-http-client": "^56.0.3",
     "jest": "^28.1.0",
     "long": "^5.2.0",
+    "peer-id": "^0.16.0",
     "prettier": "^2.6.2",
     "prettier-plugin-solidity": "^1.0.0-beta.19",
     "solhint": "^3.3.7",
