--- a/packages/contracts/tsconfig.build.json
+++ b/packages/contracts/tsconfig.build.json
@@ -6,7 +6,7 @@
   "compilerOptions": {
     "outDir": "dist",
     "noEmit": false,
-    "lib": ["DOM"],
+    "lib": ["DOM", "ESNext"],
     "types": ["long"]
   }
 }
