rename to skyblock

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "trusted-resources",
-  "version": "0.0.0",
+  "name": "sky-block",
+  "version": "0.0.1",
   "license": "MIT",
-  "author": "Matthew Keil",
+  "author": "Matthew Keil and Felipe Pedreros",
   "description": "",
   "scripts": {
     "start": "run-p start:libs start:uis",
@@ -10,12 +10,12 @@
     "clean": "npm run clean --workspaces",
     "clean:nm": "npm run clean:nm --workspaces",
     "post:clean:nm": "rm -rf node_modules",
-    "build:contracts": "npm run build --workspace=@trusted-resources/contracts",
-    "build:front": "npm run build --workspace=@trusted-resources/frontend",
-    "start:contracts": "npm run start --workspace=@trusted-resources/contracts",
-    "start:front": "npm start --workspace=@trusted-resources/frontend",
+    "build:contracts": "npm run build --workspace=@sky-block/contracts",
+    "build:front": "npm run build --workspace=@sky-block/frontend",
+    "start:contracts": "npm run start --workspace=@sky-block/contracts",
+    "start:front": "npm start --workspace=@sky-block/frontend",
     "start:uis": "run-p start:ui:*",
-    "synth": "npm run synth --workspace=@trusted-resources/infra",
+    "synth": "npm run synth --workspace=@sky-block/infra",
     "deploy": "npm run deploy --workspace=infra",
     "destroy": "npm run destroy --workspace=infra",
     "node": "node",
