--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "esbuild": "esbuild main.js --bundle --outfile=dist/bundle.js"
   },
   "devDependencies": {
     "vite": "^3.1.0"
