--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "private": true,
   "devDependencies": {
+    "@types/node": "^18.8.3",
     "esbuild": "^0.15.10",
     "npm-run-all": "^4.1.5"
   }
