--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -4,15 +4,16 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "vite": "vite",
+    "dev": "run-p vite esbuild:watch",
     "build": "vite build",
     "preview": "vite preview",
-    "esbuild": "esbuild main.js --bundle --outfile=dist/bundle.js"
+    "esbuild": "esbuild main.js --bundle --outfile=dist/bundle.js",
+    "esbuild:watch": "esbuild main.js --bundle --outfile=dist/bundle.js --watch"
   },
   "devDependencies": {
-    "vite": "^3.1.0"
-  },
-  "dependencies": {
-    "esbuild": "^0.15.10"
+    "vite": "^3.1.0",
+    "esbuild": "^0.15.10",
+    "npm-run-all": "^4.1.5"
   }
 }
