--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -12,7 +12,9 @@
   },
   "dependencies": {
     "@sendgrid/mail": "^7.7.0",
-    "ethers": "^5.7.1"
+    "eth-crypto": "^2.3.0",
+    "ethers": "^5.7.1",
+    "secp256k1": "^4.0.3"
   },
   "devDependencies": {
     "aws-sdk": "^2.1231.0",
