--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -9,12 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "web3uikit": "^0.1.159",
     "buffer": "^6.0.3",
     "moralis-v1": "^1.12.0",
+    "nanoid": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-moralis": "^1.4.2"
+    "react-moralis": "^1.4.2",
+    "web3uikit": "^0.1.159"
   },
   "devDependencies": {
     "@types/react": "^18.0.24",
