--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "workspaces": [
     "packages/contracts",
     "packages/frontend",
+    "packages/backend",
     "packages/infra"
   ],
   "engines": {
