--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
     "allowSyntheticDefaultImports": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
+    "jsx": "react",
 
     /**
      *
